--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" href="/imgs/icon512_maskable.png" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PWA Guide</title>
+    <title>Campus Connect</title>
   </head>
   <body>
     <div id="root"></div>
