--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="/imgs/icon512_maskable.png" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+   <link rel="shortcut icon" href="/logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Campus Connect</title>
     <style>
